--- a/client/css/roomstyle.css
+++ b/client/css/roomstyle.css
@@ -15,7 +15,6 @@ input::placeholder, textarea::placeholder {
 #horizontalSides{
   display: flex;
   flex-direction: row;
-  gap: 30px;
 }
 .hidden{
   display: none;
@@ -63,6 +62,8 @@ button {
 .sideReadyFlag{
     align-self: flex-end;
     margin-bottom: -5px;
+    margin-left: -5px;
+    margin-right: 20px;
 }
 
 button,input,optgroup,select,textarea {  
