--- a/client/html/index.ejs
+++ b/client/html/index.ejs
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess</title>
-    <link rel="stylesheet" href="../css/mainstyle.css">
+    <link rel="stylesheet" href="../../css/mainstyle.css">
 </head>
 <body>
 
@@ -175,8 +175,8 @@
 <g id="redCirclesLayer">
 </g>
 
-<g id="figures">
-    <g id="figure1" type="queen" side="white" class="draggable">
+<g id="figures" display="none">
+    <g id="figure1" type="queen" side="white" class="selectable">
         
             <path id="path1_00000174580930790542640500000000523466687198151839_" sodipodi:nodetypes="csssssssssssssssssssscsssssssssssssssssssssssssssssssssssscssssssssscssscc" class="st3" d="
             M581.1,1042.6c-0.2-0.2-0.6-0.9-0.9-1.6c-0.3-0.7-1.1-2.6-1.8-4.3c-0.7-1.7-2.7-6.5-4.5-10.9c-1.8-4.3-3.6-8.7-4-9.6
@@ -289,7 +289,7 @@
             c1.6,2.7,2.5,12,1.3,13.2l-0.3,0.3h-38.3h-38.2l-0.4-0.4l-0.4-0.4v-3.4c0-6.7,1-9.5,4-12c1.7-1.4,4.6-2.5,6.8-2.7
             c1.6-0.1,1.9-0.2,3-0.6c0.3-0.1,1.6-0.3,2.9-0.4c1.3-0.1,3.5-0.3,4.8-0.5C594.9,1044.5,615.5,1044.3,622.1,1044.8"/>
     </g>
-    <g id="figure2" type="king" side="white" class="draggable">
+    <g id="figure2" type="king" side="white" class="selectable">
         <path id="path7_00000029028211527202769940000001525819259017345923_" class="st3" d="M433.6,1068.9c-0.6-0.5-0.7-0.8-0.8-2.1
             c-0.1-1.4,0.1-5.8,0.4-7.5c1-6.2,3.9-8.9,11.5-10.5c2-0.4,4-0.7,8.2-1c1-0.1,2.8-0.2,4-0.3c5-0.5,12.3-0.6,24.2-0.3
             c8.2,0.2,14.7,0.7,19.4,1.7c2.7,0.6,3.7,0.9,5,1.6c4.7,2.4,6.4,6.1,6.6,13.6c0.1,3.1,0,4-0.5,4.5c-0.3,0.3-0.5,0.3-1.8,0.4
@@ -375,7 +375,7 @@
             c-0.6,0.6,0.6,0.6-39.3,0.5h-37.4l-0.4-0.3c-0.8-0.6-0.8-0.9-0.8-4.2c0.1-8.8,2.3-12.3,8.7-14.3c1.3-0.4,2.1-0.6,5-1.1
             c0.6-0.1,2.5-0.3,4.2-0.4s4.2-0.3,5.6-0.4c4.8-0.4,6.5-0.5,17.6-0.4C483.2,1047.6,486,1047.7,487.6,1047.8"/>
     </g>
-    <g id="figure3" type="pawn" side="white" class="draggable">
+    <g id="figure3" type="pawn" side="white" class="selectable">
         
             <path id="path1_00000132050369542904241570000012561280046881779371_" sodipodi:nodetypes="sssssssssccsssssssssssssssscccsssssscsscsssssssssss" class="st3" d="
             M40.7,923.1c-6.3-0.1-8.7-0.1-9-0.2c-1-0.3-1.2-2.1-0.6-5.3c0.9-4.5,1.8-7.9,3.9-10.4c0.7-0.8,2.4-2.5,3.3-3.2
@@ -414,7 +414,7 @@
             c1.1-4.2,1.3-5.3,0.7-5.9l-0.3-0.4l-4.2-0.1c-5.2-0.1-5.3-0.1-6.3-3c-0.9-2.6-0.8-2.7,5.3-6.7c4-2.6,4.7-3.2,4.7-3.7
             c0-0.1-0.8-1.1-1.8-2.1c-4.3-4.4-5.7-8.3-5.2-14.1c0.6-7.1,6.1-13.2,13.1-14.7C65.5,830.7,67.2,830.7,69.8,831.4"/>
     </g>
-    <g id="figure13" type="pawn" side="white" class="draggable">
+    <g id="figure13" type="pawn" side="white" class="selectable">
         
             <path id="path1_00000020366101607678286440000015916299665893275553_" sodipodi:nodetypes="sssssssssccsssssssssssssssscccsssssscsscsssssssssss" class="st3" d="
             M984.3,923.1c-6.3-0.1-8.7-0.1-9-0.2c-1-0.3-1.2-2.1-0.6-5.3c0.9-4.5,1.8-7.9,3.9-10.4c0.7-0.8,2.4-2.5,3.3-3.2
@@ -454,7 +454,7 @@
             c1.1-4.2,1.3-5.3,0.7-5.9l-0.3-0.4l-4.2-0.1c-5.2-0.1-5.3-0.1-6.3-3c-0.9-2.6-0.8-2.7,5.3-6.7c4-2.6,4.7-3.2,4.7-3.7
             c0-0.1-0.8-1.1-1.8-2.1c-4.3-4.4-5.7-8.3-5.2-14.1c0.6-7.1,6.1-13.2,13.1-14.7C1009.1,830.7,1010.8,830.7,1013.4,831.4"/>
     </g>
-    <g id="figure14" type="pawn" side="white" class="draggable">
+    <g id="figure14" type="pawn" side="white" class="selectable">
         
             <path id="path1_00000096753263812436859610000013650031044147118485_" sodipodi:nodetypes="sssssssssccsssssssssssssssscccsssssscsscsssssssssss" class="st3" d="
             M849.3,923.1c-6.3-0.1-8.7-0.1-9-0.2c-1-0.3-1.2-2.1-0.6-5.3c0.9-4.5,1.8-7.9,3.9-10.4c0.7-0.8,2.4-2.5,3.3-3.2
@@ -494,7 +494,7 @@
             c1.1-4.2,1.3-5.3,0.7-5.9l-0.3-0.4l-4.2-0.1c-5.2-0.1-5.3-0.1-6.3-3c-0.9-2.6-0.8-2.7,5.3-6.7c4-2.6,4.7-3.2,4.7-3.7
             c0-0.1-0.8-1.1-1.8-2.1c-4.3-4.4-5.7-8.3-5.2-14.1c0.6-7.1,6.1-13.2,13.1-14.7C874.1,830.7,875.8,830.7,878.4,831.4"/>
     </g>
-    <g id="figure15" type="pawn" side="white" class="draggable">
+    <g id="figure15" type="pawn" side="white" class="selectable">
         
             <path id="path1_00000008849366412102205270000008985487362460398464_" sodipodi:nodetypes="sssssssssccsssssssssssssssscccsssssscsscsssssssssss" class="st3" d="
             M717,923.1c-6.3-0.1-8.7-0.1-9-0.2c-1-0.3-1.2-2.1-0.6-5.3c0.9-4.5,1.8-7.9,3.9-10.4c0.7-0.8,2.4-2.5,3.3-3.2
@@ -533,7 +533,7 @@
             c1.1-4.2,1.3-5.3,0.7-5.9l-0.3-0.4l-4.2-0.1c-5.2-0.1-5.3-0.1-6.3-3c-0.9-2.6-0.8-2.7,5.3-6.7c4-2.6,4.7-3.2,4.7-3.7
             c0-0.1-0.8-1.1-1.8-2.1c-4.3-4.4-5.7-8.3-5.2-14.1c0.6-7.1,6.1-13.2,13.1-14.7C741.8,830.7,743.5,830.7,746.1,831.4"/>
     </g>
-    <g id="figure16" type="pawn" side="white" class="draggable">
+    <g id="figure16" type="pawn" side="white" class="selectable">
         
             <path id="path1_00000082365424372656760100000007059457351772397232_" sodipodi:nodetypes="sssssssssccsssssssssssssssscccsssssscsscsssssssssss" class="st3" d="
             M579.6,923.1c-6.3-0.1-8.7-0.1-9-0.2c-1-0.3-1.2-2.1-0.6-5.3c0.9-4.5,1.8-7.9,3.9-10.4c0.7-0.8,2.4-2.5,3.3-3.2
@@ -573,7 +573,7 @@
             c1.1-4.2,1.3-5.3,0.7-5.9l-0.3-0.4l-4.2-0.1c-5.2-0.1-5.3-0.1-6.3-3c-0.9-2.6-0.8-2.7,5.3-6.7c4-2.6,4.7-3.2,4.7-3.7
             c0-0.1-0.8-1.1-1.8-2.1c-4.3-4.4-5.7-8.3-5.2-14.1c0.6-7.1,6.1-13.2,13.1-14.7C604.4,830.7,606.1,830.7,608.7,831.4"/>
     </g>
-    <g id="figure17" type="pawn" side="white" class="draggable">
+    <g id="figure17" type="pawn" side="white" class="selectable">
         
             <path id="path1_00000006693027064980420890000017927250585491628943_" sodipodi:nodetypes="sssssssssccsssssssssssssssscccsssssscsscsssssssssss" class="st3" d="
             M447.2,923.1c-6.3-0.1-8.7-0.1-9-0.2c-1-0.3-1.2-2.1-0.6-5.3c0.9-4.5,1.8-7.9,3.9-10.4c0.7-0.8,2.4-2.5,3.3-3.2
@@ -613,7 +613,7 @@
             c1.1-4.2,1.3-5.3,0.7-5.9l-0.3-0.4l-4.2-0.1c-5.2-0.1-5.3-0.1-6.3-3c-0.9-2.6-0.8-2.7,5.3-6.7c4-2.6,4.7-3.2,4.7-3.7
             c0-0.1-0.8-1.1-1.8-2.1c-4.3-4.4-5.7-8.3-5.2-14.1c0.6-7.1,6.1-13.2,13.1-14.7C472,830.7,473.7,830.7,476.3,831.4"/>
     </g>
-    <g id="figure18" type="pawn" side="white" class="draggable">
+    <g id="figure18" type="pawn" side="white" class="selectable">
         
             <path id="path1_00000066501315024341769750000001098084582376297104_" sodipodi:nodetypes="sssssssssccsssssssssssssssscccsssssscsscsssssssssss" class="st3" d="
             M309.6,923.1c-6.3-0.1-8.7-0.1-9-0.2c-1-0.3-1.2-2.1-0.6-5.3c0.9-4.5,1.8-7.9,3.9-10.4c0.7-0.8,2.4-2.5,3.3-3.2
@@ -653,7 +653,7 @@
             c1.1-4.2,1.3-5.3,0.7-5.9l-0.3-0.4l-4.2-0.1c-5.2-0.1-5.3-0.1-6.3-3c-0.9-2.6-0.8-2.7,5.3-6.7c4-2.6,4.7-3.2,4.7-3.7
             c0-0.1-0.8-1.1-1.8-2.1c-4.3-4.4-5.7-8.3-5.2-14.1c0.6-7.1,6.1-13.2,13.1-14.7C334.4,830.7,336.1,830.7,338.7,831.4"/>
     </g>
-    <g id="figure19" type="pawn" side="white" class="draggable">
+    <g id="figure19" type="pawn" side="white" class="selectable">
         
             <path id="path1_00000138564053748639805230000007032121165631684262_" sodipodi:nodetypes="sssssssssccsssssssssssssssscccsssssscsscsssssssssss" class="st3" d="
             M178.4,923.1c-6.3-0.1-8.7-0.1-9-0.2c-1-0.3-1.2-2.1-0.6-5.3c0.9-4.5,1.8-7.9,3.9-10.4c0.7-0.8,2.4-2.5,3.3-3.2
@@ -693,7 +693,7 @@
             c1.1-4.2,1.3-5.3,0.7-5.9l-0.3-0.4l-4.2-0.1c-5.2-0.1-5.3-0.1-6.3-3c-0.9-2.6-0.8-2.7,5.3-6.7c4-2.6,4.7-3.2,4.7-3.7
             c0-0.1-0.8-1.1-1.8-2.1c-4.3-4.4-5.7-8.3-5.2-14.1c0.6-7.1,6.1-13.2,13.1-14.7C203.2,830.7,204.9,830.7,207.5,831.4"/>
     </g>
-    <g id="figure4" type="bishop" side="white" class="draggable">
+    <g id="figure4" type="bishop" side="white" class="selectable">
         <path id="path3_00000141447131249017438570000002695715467785262778_" class="st3" d="M301.5,1069.6c-2-0.1-3-0.2-3.3-0.3
             c-0.2-0.1-0.3-0.2-0.4-0.6c-0.2-0.7-0.3-1.7-0.3-3.7c0.1-2.4,0.2-4.5,0.6-6.2c0.4-2.2,1.4-4.1,2.8-5.6c2-2.1,4.5-3.2,9.3-4.2
             c2.1-0.4,2.8-0.5,5.4-0.6c3.7-0.2,4.4-0.2,6-0.5c1.1-0.2,2.1-0.3,4-0.4c5.2-0.3,16.3-0.3,23.8,0c2.2,0.1,2.9,0.2,4.2,0.4
@@ -745,7 +745,7 @@
             c5.9,1.2,8.9,3.5,10.4,8c0.6,1.9,1,9.8,0.4,10.5c-0.7,0.9,2.5,0.8-38.9,0.8c-42.1,0-38.3,0.1-38.9-1s-0.2-8.1,0.6-10.6
             c1.4-4.3,4.6-6.6,10.7-7.9c3.3-0.7,3.2-0.9,7.1-1C327,1048,336.7,1047.8,346.6,1048"/>
     </g>
-    <g id="figure20" type="bishop" side="white" class="draggable">
+    <g id="figure20" type="bishop" side="white" class="selectable">
         <path id="path3_00000062193998478913351600000005932297707153082288_" class="st3" d="M706.7,1069.6c-2-0.1-3-0.2-3.3-0.3
             c-0.2-0.1-0.3-0.2-0.4-0.6c-0.2-0.7-0.3-1.7-0.3-3.7c0.1-2.4,0.2-4.5,0.6-6.2c0.4-2.2,1.4-4.1,2.8-5.6c2-2.1,4.5-3.2,9.3-4.2
             c2.1-0.4,2.8-0.5,5.4-0.6c3.7-0.2,4.4-0.2,6-0.5c1.1-0.2,2.1-0.3,4-0.4c5.2-0.3,16.3-0.3,23.8,0c2.2,0.1,2.9,0.2,4.2,0.4
@@ -797,7 +797,7 @@
             c5.9,1.2,8.9,3.5,10.4,8c0.6,1.9,1,9.8,0.4,10.5c-0.7,0.9,2.5,0.8-38.9,0.8c-42.1,0-38.3,0.1-38.9-1c-0.6-1.1-0.2-8.1,0.6-10.6
             c1.4-4.3,4.6-6.6,10.7-7.9c3.3-0.7,3.2-0.9,7.1-1C732.2,1048,741.9,1047.8,751.8,1048"/>
     </g>
-    <g id="figure5" type="knight" side="white" class="draggable">
+    <g id="figure5" type="knight" side="white" class="selectable">
         <path id="path1_00000162315532946427284980000015609631282080107904_" class="st3" d="M167.2,1067.2c-0.9-0.2-1-0.7-1-4.1
             c0-1.9,0.1-3.9,0.3-5c1-6.4,4.2-9.7,10.8-11.2c2.1-0.4,9.6-1.2,15.5-1.6c5-0.3,22.3-0.3,26.8,0c6.6,0.5,11.8,1,14.8,1.6
             c2.5,0.5,3.2,0.7,4.7,1.5c4.3,2.3,6,4.8,6.9,10.3c0.4,2.6,0.3,7.2-0.2,7.9l-0.3,0.5l-7.2,0.1
@@ -860,7 +860,7 @@
             c0.7,0.1,2.3,0.3,3.5,0.5s2.5,0.5,2.8,0.5c3.2,0.5,7.2,3.3,8.5,6c1.7,3.4,2.2,11.5,0.8,12.7c-0.4,0.4-75.5,0.5-76.6,0.2
             c-1.1-0.4-1.1-0.7-1.1-4.5c0.1-10.4,4.2-14.4,15.6-15.3c0.9-0.1,3.6-0.3,5.9-0.5C194.9,1045.6,206.5,1045.4,215.5,1045.7"/>
     </g>
-    <g id="figure21" type="knight" side="white" class="draggable">
+    <g id="figure21" type="knight" side="white" class="selectable">
         <path id="path1_00000168839413534738633750000001411800441324401835_" class="st3" d="M843.7,1067.2c-0.9-0.2-1-0.7-1-4.1
             c0-1.9,0.1-3.9,0.3-5c1-6.4,4.2-9.7,10.8-11.2c2.1-0.4,9.6-1.2,15.5-1.6c5-0.3,22.3-0.3,26.8,0c6.6,0.5,11.8,1,14.8,1.6
             c2.5,0.5,3.2,0.7,4.7,1.5c4.3,2.3,6,4.8,6.9,10.3c0.4,2.6,0.3,7.2-0.2,7.9l-0.3,0.5l-7.2,0.1
@@ -922,7 +922,7 @@
             c0.7,0.1,2.3,0.3,3.5,0.5s2.5,0.5,2.8,0.5c3.2,0.5,7.2,3.3,8.5,6c1.7,3.4,2.2,11.5,0.8,12.7c-0.4,0.4-75.5,0.5-76.6,0.2
             c-1.1-0.4-1.1-0.7-1.1-4.5c0.1-10.4,4.2-14.4,15.6-15.3c0.9-0.1,3.6-0.3,5.9-0.5C871.4,1045.6,883,1045.4,892,1045.7"/>
     </g>
-    <g id="figure6" type="rook" side="white" class="draggable">
+    <g id="figure6" type="rook" side="white" class="selectable">
         
             <path id="path1_00000129900912867151164810000017501173254620407443_" sodipodi:nodetypes="ssssssssscsssssssssss" class="st3" d="
             M29.7,1063.5c0,0.3-3.8-0.2-3.9-0.5c-0.2-1.1-0.2-3.7,0.1-7c0.2-2.6,0.5-3.7,1.1-5.1c1.2-2.5,3.9-5.7,6.4-6.7
@@ -1015,7 +1015,7 @@
             c0.5,1.6,0.9,8.9,0.6,9.9c-0.4,1.2,3.8,1.1-39,1.1s-38.6,0.1-39-1.1c-0.3-1,0.1-8.4,0.6-9.9c1.3-4.2,4.8-7.2,9.2-8
             c1.7-0.3,2.4-0.4,3.1-0.7c0.4-0.1,2-0.3,3.6-0.4c4.2-0.3,6.1-0.5,6.5-0.6C51.4,1042.2,79.2,1042.2,81.6,1042.5"/>
     </g>
-    <g id="figure22" type="rook" side="white" class="draggable">
+    <g id="figure22" type="rook" side="white" class="selectable">
         
             <path id="path1_00000011011881497968282250000001302765824990345607_" sodipodi:nodetypes="ssssssssscsssssssssss" class="st3" d="
             M975.2,1063.5c0,0.3-3.8-0.2-3.9-0.5c-0.2-1.1-0.2-3.7,0.1-7c0.2-2.6,0.5-3.7,1.1-5.1c1.2-2.5,3.9-5.7,6.4-6.7
@@ -2105,9 +2105,10 @@
 </svg>
 
 </body>
+<script src='../../js/node_modules/socket.io-client/dist/socket.io.min.js'></script>
 <script>
     let roomEl = <%- JSON.stringify(roomEl) %>
-    const currentUserIp = '<%= userIp %>'
+    const currentUserSideIndex = '<%= userSideIndex %>'
 </script>
-<script src="../js/app.js"></script>
+<script src="../../js/app.js"></script>
 </html>
