--- a/client/html/index.ejs
+++ b/client/html/index.ejs
@@ -2108,7 +2108,7 @@
 <script src='../../js/node_modules/socket.io-client/dist/socket.io.min.js'></script>
 <script>
     let roomEl = <%- JSON.stringify(roomEl) %>
-    const currentUserSideIndex = '<%= userSideIndex %>'
+    const currentUserSideIndex = parseInt('<%= userSideIndex %>')
 </script>
 <script src="../../js/app.js"></script>
 </html>
