--- a/client/html/index.ejs
+++ b/client/html/index.ejs
@@ -175,7 +175,7 @@
 <g id="redCirclesLayer">
 </g>
 
-<g id="figures" display="none">
+<g id="figures" >
     <g id="figure1" type="queen" side="white" class="selectable">
         
             <path id="path1_00000174580930790542640500000000523466687198151839_" sodipodi:nodetypes="csssssssssssssssssssscsssssssssssssssssssssssssssssssssssscssssssssscssscc" class="st3" d="
