--- a/client/css/mainstyle.css
+++ b/client/css/mainstyle.css
@@ -4,13 +4,48 @@
 .draggable {
   cursor: pointer;
   position: absolute;
-  
+  transform-box: fill-box;
+  transform-origin: center;
 }
 .selectable {
   cursor: pointer;
   position: absolute;
-  
+  transform-box: fill-box;
+  transform-origin: center;
 }
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;  
+  background: rgba(134, 134, 134, 0.459);
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: #a5a2a2;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #a5a2a2;
+  cursor: pointer;
+}
+
 
 body{
     background-color: #2d2d2d;
