ready to deploy!

--- a/client/html/room.ejs
+++ b/client/html/room.ejs
@@ -30,7 +30,7 @@
 
         <div id="board">
             <img
-                src="../../board1.svg"
+                src="../../<%= boardId %>.svg"
                 alt="image"
                 class="home-image"/>
         </div>
