--- a/client/html/board1.ejs
+++ b/client/html/board1.ejs
@@ -2084,6 +2084,7 @@
 <script>
     let roomEl = <%- JSON.stringify(roomEl) %>
     const currentUserSideIndex = parseInt('<%= userSideIndex %>')
+	const config = <%- JSON.stringify(config) %>
 </script>
 <script src="../../js/app.js"></script>
 </html>
