--- a/client/html/board2.ejs
+++ b/client/html/board2.ejs
@@ -4217,6 +4217,7 @@
 <script>
     let roomEl = <%- JSON.stringify(roomEl) %>
     const currentUserSideIndex = parseInt('<%= userSideIndex %>')
+    const config = <%- JSON.stringify(config) %>
 </script>
 <script src="../../js/app.js"></script>
 </html>
