--- a/client/html/board3.ejs
+++ b/client/html/board3.ejs
@@ -3070,6 +3070,7 @@
 <script>
     let roomEl = <%- JSON.stringify(roomEl) %>
     const currentUserSideIndex = parseInt('<%= userSideIndex %>')
+    const config = <%- JSON.stringify(config) %>
 </script>
 <script src="../../js/app.js"></script>
 </html>
