--- a/client/html/room.ejs
+++ b/client/html/room.ejs
@@ -139,6 +139,7 @@
     let roomEl = <%- JSON.stringify(roomEl) %>
     const currentUserSideIndex = <%= userSideIndex %>
     const isItCreator = <%= isItCreator %>
+    const config = <%- JSON.stringify(config) %>
 </script>
 <script src="../../js/room.js"></script>
 </html>
