--- a/client/css/mainstyle.css
+++ b/client/css/mainstyle.css
@@ -1,67 +1,65 @@
 .static {
     cursor: not-allowed;
-  }
+}
 .draggable {
-  cursor: pointer;
-  position: absolute;
-  transform-box: fill-box;
-  transform-origin: center;
+    cursor: pointer;
+    position: absolute;
+    transform-box: fill-box;
+    transform-origin: center;
 }
 .selectable {
-  cursor: pointer;
-  position: absolute;
-  transform-box: fill-box;
-  transform-origin: center;
+    cursor: pointer;
+    position: absolute;
+    transform-box: fill-box;
+    transform-origin: center;
 }
 
 .slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 15px;
-  border-radius: 5px;  
-  background: rgba(134, 134, 134, 0.089);
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-  margin-top: 30px;
-  margin-bottom: 30px;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: rgba(134, 134, 134, 0.089);
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%; 
-  background: #a5a2a2;
-  cursor: pointer;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #a5a2a2;
+    cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #a5a2a2;
-  cursor: pointer;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #a5a2a2;
+    cursor: pointer;
 }
 
-
-body{
+body {
     background-color: #2d2d2d;
     width: fit-content;
     height: fit-content;
-    padding: 100%; 
+    padding: 100%;
     margin: 0;
-    -webkit-tap-highlight-color:rgba(0,0,0,0)
-  }
-  
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
-  html{
+html {
     width: 100%;
     height: 100%;
     margin: 0;
-  }
+}
 
 ::-webkit-scrollbar {
     width: 5px;
