--- a/client/html/menu.ejs
+++ b/client/html/menu.ejs
@@ -95,7 +95,7 @@
     <script>
         const config = <%- JSON.stringify(config) %>
 
-        const socket = io(`http://${config.HOST}:${config.CLIENT_PORT}`)
+        const socket = io(`https://${config.HOST}:${config.CLIENT_PORT}`)
 
         for(const preview of document.querySelectorAll(".boardPreview")){
             preview.setAttribute('onclick', "boardClick(id)")
