socket io another import

--- a/client/html/board.ejs
+++ b/client/html/board.ejs
@@ -14,7 +14,9 @@
             <input type="range" min="0" max="360" value="0" class="slider" id="rotate-slider" />
         </div>
     </body>
-    <script src="../../js/node_modules/socket.io-client/dist/socket.io.min.js"></script>
+
+    <script src="https://cdn.socket.io/3.1.1/socket.io.min.js"></script>
+    <!--script src="../../js/node_modules/socket.io-client/dist/socket.io.min.js"></script-->
     <script>
         // что бы не было резких мувов после загрузки страницы
         document.getElementById('figures').setAttribute('display', 'none')
