--- a/client/html/room.ejs
+++ b/client/html/room.ejs
@@ -152,8 +152,8 @@
         </div>
     </body>
 
-    <!--script src="https://cdn.socket.io/3.1.1/socket.io.min.js"></script-->
-    <script src="../../js/node_modules/socket.io-client/dist/socket.io.min.js"></script>
+    <script src="https://cdn.socket.io/3.1.1/socket.io.min.js"></script>
+    <!--script src="../../js/node_modules/socket.io-client/dist/socket.io.min.js"></script-->
     <script>
         let roomEl = <%- JSON.stringify(roomEl) %>
         const currentUserSideIndex = <%= userSideIndex %>
