--- a/client/html/menu.ejs
+++ b/client/html/menu.ejs
@@ -91,7 +91,8 @@
         </div>
     </body>
 
-    <script src="js/node_modules/socket.io-client/dist/socket.io.min.js"></script>
+    <script src="https://cdn.socket.io/3.1.1/socket.io.min.js"></script>
+    <!--script src="js/node_modules/socket.io-client/dist/socket.io.min.js"></script-->
     <script>
         const config = <%- JSON.stringify(config) %>
 
