--- a/client/html/menu.ejs
+++ b/client/html/menu.ejs
@@ -91,12 +91,14 @@
         </div>
     </body>
 
-    <script src="https://cdn.socket.io/3.1.1/socket.io.min.js"></script>
-    <!--script src="js/node_modules/socket.io-client/dist/socket.io.min.js"></script-->
+    <!--script src="../../js/node_modules/socket.io-client/dist/socket.io.min.js"></script-->
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script>
         const config = <%- JSON.stringify(config) %>
 
-        const socket = io(`https://${config.HOST}:${config.CLIENT_PORT}`)
+        //const socket = io(`http://${config.HOST}:${config.CLIENT_PORT}`)
+        const socket = io(`${window.location.protocol}//${window.location.hostname}:${window.location.port}`);
+
 
         for(const preview of document.querySelectorAll(".boardPreview")){
             preview.setAttribute('onclick', "boardClick(id)")
