--- a/client/html/menu.ejs
+++ b/client/html/menu.ejs
@@ -92,12 +92,12 @@
     </body>
 
     <!--script src="../../js/node_modules/socket.io-client/dist/socket.io.min.js"></script-->
-    <!--script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script-->
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script>
         const config = <%- JSON.stringify(config) %>
 
         //const socket = io(`http://${config.HOST}:${config.CLIENT_PORT}`)
-        //const socket = io(`${window.location.protocol}//${window.location.hostname}:${window.location.port}`);
+        const socket = io(`${window.location.protocol}//${window.location.hostname}:${window.location.port}`)
 
 
         for(const preview of document.querySelectorAll(".boardPreview")){
@@ -107,11 +107,10 @@
 
         function boardClick(boardId){
             console.log(123)
-            /*
             socket.emit("new-room", boardId)
             socket.on("room-added", (newRoomId, creatorKey) =>{
                 window.location.href='/room/' + newRoomId + '/' + creatorKey
-            })*/
+            })
         }
     </script>
 </html>
