--- a/client/html/board.ejs
+++ b/client/html/board.ejs
@@ -23,5 +23,6 @@
         let roomEl = <%- JSON.stringify(roomEl) %>
         const currentUserSideIndex = parseInt('<%= userSideIndex %>')
     </script>
-    <script src="../../js/app.js"></script>
+    <script type="module" src="../../js/app.js"></script>
+    <!--script src="../../js/app.js"></script-->
 </html>
